# libonsen

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  LICENCE  LICENSE  Makefile.am  README  README.md  archive.h  archive_entry.h  archive_plugin.c  archive_plugin.h  autogen.sh  configure  configure.ac  file_utils.c  globals.h  iconv_utils.c  onsen.h  plugin.c  plugin.h  shift_jis_utils.c  string_utils.h  utils.c  utils.h
doc/: API
src/: Makefile.am  archive_entry.c  archive_entry.h  archive_info.c  archive_info.h  archive_plugin.c  archive_plugin.h  archive_system.h  config.h.in  constants.h  encodings.c  encodings.h  file_utils.c  file_utils.h  globals.h  iconv_utils.c  iconv_utils.h  onsen.c  onsen.h  picture.c  picture.h  picture_exporter_plugin.c  picture_exporter_plugin.h  picture_importer_plugin.c  picture_importer_plugin.h  plugin.c  plugin.h  shift_jis_utils.c  shift_jis_utils.h  string_utils.c  string_utils.h  utils.c  utils.h  verbosity.h  version.h.in
